[tool.poetry]
name = "iris-access-data"
version = "0.1.0"
description = ""
authors = ["matthieugouel <matthieu.gouel@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dioptra-iris-client = "^0.4.5"
pych-client = {extras = ["orjson"], version = "^0.3.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.16.0"
flake8 = "^5.0.4"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
